@@ -1086,7 +1086,7 @@ class Stream(object):
             ``(latitude, longitude)``.
         :type plot_dx: int, optional
         :param plot_dx: Spacing of ticks on the spatial x-axis.
-            Either km or degree, depending on ``dist_degree``.
+            Either m or degree, depending on ``dist_degree``.
         :type recordstart: int or float, optional
         :param recordstart: Seconds to crop from the beginning.
         :type recordlength: int or float, optional
